--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 :root {
     --bg-color: #fdfdfd;
     --text-color: #333;
-    --main-color: #B76774;
+    --main-color: #ac58f0;
     --white-color: #fdfdfd;
     --shadow-color: rgba(0, 0, 0, .2);
 }
