--- a/css/style.css
+++ b/css/style.css
@@ -512,6 +512,13 @@ section#about {
     color: #333;
 }
 
+.portfolio-box img {
+    width: 100%; /* Ensure the image fills its container */
+    height: 200px; /* Set a fixed height */
+    object-fit: cover; /* Ensure the image covers the specified dimensions */
+    transition: .5s ease;
+}
+
 .testimonial-container {
     display: flex;
     align-items: center;
