--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,9 @@ section {
 }
 
 .home .home.png {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 5rem; /* Add some gap between the home-content and home.png */
 }
 
