--- a/css/style.css
+++ b/css/style.css
@@ -460,13 +460,48 @@ section#about {
     overflow: hidden;
 }
 
+.portfolio-container .certification-box {
+    position: relative;
+    display: flex;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, .1);
+    overflow: hidden;
+}
+
 .portfolio-box img {
     width: 100%;
     transition: .5s ease;
 }
 
+.certification-box img {
+    width: 100%;
+    transition: .5s ease;
+}
+
+.certification-box:hover img {
+    transform: scale(1.1);
+}
+
 .portfolio-box:hover img {
     transform: scale(1.1);
+}
+
+.certification-box .portfolio-layer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, .1), var(--main-color));
+    color: var(--white-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
+    opacity: 0;
+    transition: .5s ease;
 }
 
 .portfolio-box .portfolio-layer {
@@ -488,6 +523,10 @@ section#about {
 }
 
 .portfolio-box:hover .portfolio-layer {
+    opacity: 1;
+}
+
+.certification-box:hover .portfolio-layer {
     opacity: 1;
 }
 
@@ -513,6 +552,13 @@ section#about {
 .portfolio-layer a i {
     font-size: 2rem;
     color: #333;
+}
+
+.certification-box img {
+    width: 100%; /* Ensure the image fills its container */
+    /* height: 200px; Set a fixed height */
+    object-fit: cover; /* Ensure the image covers the specified dimensions */
+    transition: .5s ease;
 }
 
 .portfolio-box img {
