--- a/css/style.css
+++ b/css/style.css
@@ -446,8 +446,18 @@ section#about {
     margin-bottom: 7rem;
 }
 
-.portfolio .portfolio-container {
+/* .portfolio .portfolio-container {
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    gap: 2.5rem;
+} */
+
+.portfolio .portfolio-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column; 
+    flex-wrap: wrap;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     gap: 2.5rem;
