--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,21 @@ section {
     color: var(--white-color);
 }
 
-.home.png {
+
+.home .home.png {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 5rem; /* Add some gap between the home-content and home.png */
+}
+
+.home .home.png img {
+    width: 100%;
+    max-width: 100%;
+    align-items: center;
+}
+
+/* .container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -184,24 +198,12 @@ section {
 
 .profile-image {
     width: 100%;
+    max-width: 100%;
 }
 
 .centered-badge {
     width: 25%;
     max-width: 50%;
-}
-
-/* .home .home.png {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 5rem; Add some gap between the home-content and home.png
-}
-
-.home .home.png img {
-    width: 100%;
-    max-width: 100%;
-    align-items: center;
 } */
 
 
