--- a/css/style.css
+++ b/css/style.css
@@ -595,7 +595,7 @@ section#about {
 
 .certification-box img {
     width: 100%; /* Ensure the image fills its container */
-    /* height: 200px; Set a fixed height */
+    height: 100px; Set a fixed height
     object-fit: cover; /* Ensure the image covers the specified dimensions */
     transition: .5s ease;
 }
