--- a/css/style.css
+++ b/css/style.css
@@ -507,11 +507,11 @@ section#about {
     box-shadow: 0 0 1rem rgba(0, 0, 0, .1);
     overflow: hidden; 
 }
-
+/* 
 .portfolio-box img {
     width: 100%;
     transition: .5s ease;
-}
+} */
 
 .certification-box img {
     width: 100%;
