--- a/css/style.css
+++ b/css/style.css
@@ -498,7 +498,7 @@ section#about {
     box-shadow: 0 0 1rem rgba(0, 0, 0, .1);
     overflow: hidden;
 }
-
+/* 
 .certification-container .certification-box {
     position: relative;
     display: flex;
@@ -506,7 +506,7 @@ section#about {
     border-radius: 2rem;
     box-shadow: 0 0 1rem rgba(0, 0, 0, .1);
     overflow: hidden; 
-}
+} */
 /* 
 .portfolio-box img {
     width: 100%;
