--- a/css/style.css
+++ b/css/style.css
@@ -498,7 +498,7 @@ section#about {
     box-shadow: 0 0 1rem rgba(0, 0, 0, .1);
     overflow: hidden;
 }
-/* 
+
 .certification-container .certification-box {
     position: relative;
     display: flex;
@@ -506,8 +506,8 @@ section#about {
     border-radius: 2rem;
     box-shadow: 0 0 1rem rgba(0, 0, 0, .1);
     overflow: hidden; 
-} */
-/* 
+} 
+
 .portfolio-box img {
     width: 100%;
     transition: .5s ease;
