--- a/css/style.css
+++ b/css/style.css
@@ -486,9 +486,11 @@ section#about {
 .portfolio .certification-container {
     display: grid;
     flex-direction: row;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(100px, 1fr));
     align-items: center;
     gap: 2.5rem;
+    margin: 0 auto;
+    max-width: fit-content;
 }
 
 .portfolio-container .portfolio-box {
